add menu to page

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module</title>
-    <link href= "./style.css" rel= "stylesheet">
+    <link href= "style.css" rel= "stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <button class= "switch">Dark mode</button>
+
+<button class= "switch">Dark mode</button>
+<button class= "btn" style="font-size:24px"><i class="fa fa-shopping-cart"></i></button>
+   
+<aside class= "shopping-cart">
+    <div class= "shopping-list">List</div>
+    <div class= "shopping-total">Total</div>
+</aside>
+
+<main></main>
 
    <script type="module" src="script.js"></script> 
 </body>
